# anagolay-chain

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.yml  Cargo.toml  Dockerfile  Makefile.toml  README.md  STRUCTURE.md  development.md  docker-compose-local.yml  docker-compose.yml  production-compose.yml  production.yml  rust-ci-docker-compose.yml  rust-ci.Dockerfile  rust-toolchain-1.toml  rust-toolchain.toml  rustfmt.toml  rusty-hook.toml  sample.env  shell.nix
.devcontainer/: .p10k.zsh  .zshrc  Dockerfile  README.md  copy-local-config-and-ssh-creds.sh  devcontainer.base.Dockerfile  devcontainer.json  docker-compose.yml  install-deps.sh
.devops/: build.sh  run-all-benchmarks.sh  run-benchmarks.sh
.devops/ci/cachier/: download-cache.sh  setup-cache.sh  upload-cache.sh
.devops/ci/not-include/: pallets.yaml
.devops/docker/compose/: anagolay.yml  ci-linux.yml  validators.yml
.devops/docker/prod/: anagolay-with-artifact.dockerfile  anagolay.dockerfile  ci-linux.dockerfile
.devops/git-hooks/: pre-commit  pre-push
.devops/gitpod/: prep-doppler.sh  start-cmd.sh
.devops/scripts/: install-common-crates.sh  setup-rust-related-pacakges.sh  update-copyright.sh
.gitlab/issue_templates/: bug.md  epic.md  story.md  task.md
anagolay/: Cargo.toml  README.md
anagolay/src/: lib.rs
assets/: bullseye.list  common-debian.sh
assets/dotfiles/: .env.zsh  .p10k.zsh  .tmux.conf  .zshrc
devops/: build.sh
devops/docker/: Dockerfile  build-all.sh
devops/docker/builder/: Dockerfile  build.sh
devops/docker/node/: Dockerfile  build.Dockerfile  build.sh
devops/dockerfiles/: .devcontainer.Dockerfile  .gitpod.Dockerfile
devops/prod/: anagolay.Dockerfile  ci-linux.Dockerfile
devops/scripts/: deps.sh  init.bat  init.sh  prepare-env.sh  release  run-flow.bat  run-flow.sh  start.bat  start.sh
devops/workspaces/: .devcontainer.Dockerfile  .gitpod.Dockerfile
docker/: Dockerfile  build.sh
docs/: STRUCTURE.md
implemented-operations/123/: Cargo.toml
implemented-operations/123/src/: lib.rs
implemented-operations/an-cid/: Cargo.toml  README.md
implemented-operations/an-cid/src/: lib.rs  tests.rs
implemented-operations/sn-cid/: Cargo.toml  README.md
implemented-operations/sn-cid/src/: lib.rs  tests.rs
node/: Cargo.toml  LICENSE  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  command_helper.rs  lib.rs  main.rs  rpc.rs  service.rs
operations/123/: Cargo.toml
operations/123/src/: lib.rs
operations/an-cid/: Cargo.toml  README.md
operations/an-cid/src/: lib.rs  tests.rs
pallets/123-pallet/: Cargo.toml
pallets/123-pallet/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/anagolay/: Cargo.toml
pallets/anagolay-support/: Cargo.toml
pallets/anagolay-support/src/: functions.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/anagolay-support/src/functions/: mod.rs  public.rs
pallets/anagolay-support/src/types/: characters.rs  mod.rs  rpc.rs
pallets/anagolay-support/src/types/ids/: generic_id.rs  mod.rs
pallets/anagolay-support/src/types/maps/: mod.rs  serializable.rs
pallets/anagolay-support/src/types/private/: generic_id.rs  mod.rs
pallets/anagolay/src/: lib.rs  types.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs
pallets/operations/: Cargo.toml  LICENSE  README.md
pallets/operations/rpc/: Cargo.toml
pallets/operations/rpc/runtime-api/: Cargo.toml
pallets/operations/rpc/runtime-api/src/: lib.rs
pallets/operations/rpc/src/: lib.rs
pallets/operations/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/poe/: Cargo.toml  README.md
pallets/poe/src/: README.md  benchmarking.rs  functions.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/rules/: Cargo.toml  README.md
pallets/rules/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/sensio/: Cargo.toml
pallets/sensio/src/: lib.rs
pallets/statements/: Cargo.toml  README.md
pallets/statements/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/template/: Cargo.toml
pallets/tipping/: Cargo.toml  README.md
pallets/tipping/rpc/: Cargo.toml
pallets/tipping/rpc/runtime-api/: Cargo.toml
pallets/tipping/rpc/runtime-api/src/: lib.rs
pallets/tipping/rpc/src/: lib.rs
pallets/tipping/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/verification/: Cargo.toml  LICENSE  README.md
pallets/verification/rpc/: Cargo.toml
pallets/verification/rpc/runtime-api/: Cargo.toml
pallets/verification/rpc/runtime-api/src/: lib.rs
pallets/verification/rpc/src/: lib.rs
pallets/verification/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  offchain.rs  tests.rs  types.rs  weights.rs
pallets/verification/src/strategies/: domain.rs  mod.rs
pallets/workflows/: Cargo.toml  README.md
pallets/workflows/rpc/: Cargo.toml
pallets/workflows/rpc/runtime-api/: Cargo.toml
pallets/workflows/rpc/runtime-api/src/: lib.rs
pallets/workflows/rpc/src/: lib.rs
pallets/workflows/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
resources/idiyanale/: genesis.json  spec.json
runtime/: Cargo.toml  LICENSE
runtime/src/: constants.rs  lib.rs  tests.rs  xcm_config.rs
runtime/src/weights/: an_operations.rs  an_poe.rs  an_rules.rs  an_statements.rs  block_weights.rs  extrinsic_weights.rs  mod.rs  pallet_uniques.rs  pallet_utility.rs  pallet_vesting.rs  paritydb_weights.rs  rocksdb_weights.rs
scripts/: 01-install-system-dependencies.sh  03-install-cargo-pacakges.sh  03-install-cargo-packages.sh  99-install-dev-cargo-packages.sh  build-anagolay-docker.sh  init.sh  install-common-crates.sh  install-deps.sh  run-all-benchmarks.sh  run-benchmarks.sh  setup-dev-env.sh  setup-rust-related-pacakges.sh  start.bat
scripts/revisit-and-delete/: 00-upgrade-system.sh  01-install-system-dependencies.sh  02-setup-toolchain.sh  10-cleanup.sh
templates/: dep-weight-template.hbs  module-weight-template.hbs
zombienet/: config.toml
(+11 files in other folders)
