[workspace]
members = [
  'node',
  'pallets/anagolay',
  'pallets/operations',
  'pallets/statements',
  'pallets/rules',
  'pallets/poe',
  'runtime',
]

# defaults for the dev profile
# [profile.dev]
# opt-level = 0
# debug = true
# split-debuginfo = '...'  # Platform-specific.
# debug-assertions = true
# overflow-checks = true
# lto = false
# panic = 'unwind'
# incremental = true
# codegen-units = 256
# rpath = false

# defaults for release profile
[profile.release]
# opt-level = 3
# debug = false
# split-debuginfo = '...'  # Platform-specific.
# debug-assertions = false
# overflow-checks = false
# lto = false
panic = 'unwind'
# incremental = false
# codegen-units = 16
# rpath = false

# # defaults for the test profile
# [profile.test]
# opt-level = 0
# debug = 2
# split-debuginfo = '...'  # Platform-specific.
# debug-assertions = true
# overflow-checks = true
# lto = false
# panic = 'unwind'    # This setting is always ignored.
# incremental = true
# codegen-units = 256
# rpath = false
