[workspace]
members = [
  'node',
  'pallets/anagolay-support',
  'pallets/operations',
  'pallets/statements',
  'pallets/workflows',
  'pallets/poe',
  'runtime',
]

[profile.dev]
incremental = true
# codegen-units = 16

[profile.release]
panic = 'unwind'

# 
[profile.production]
inherits = "release"
opt-level = 3
lto = true
