[workspace]
members = [
  'node',
  'pallets/anagolay-support',
  'pallets/operations',
  'pallets/statements',
  'pallets/workflows',
  'pallets/poe',
  'pallets/verification',
  'pallets/tipping',
  'runtime',
]

[profile.dev]
incremental = true
# codegen-units = 16

[profile.release]
panic = 'unwind'


[profile.production]
inherits  = "release"
opt-level = 3
lto       = true

# Patches for workflows
[patch.'https://gitlab.com/anagolay/operations/op_multihash']
op_multihash = { git = "https://ipfs.anagolay.network/ipfs/bafybeig4y4fcwssfcxbjspvztgy2juba6c4nmc6lc5ah7fswjl5g6wokhq" }
