[package]
authors = ['did:substrate:GHm6gp6khjcxQvnbnSsHdYejsFK1nNVxcGyGAsbDfsymtLr']
description = 'Anagolay, defaults are here'
repository = 'https://gitlab.com/anagolay/node/'
homepage = 'https://anagolay.network/pallet/anagolay'
edition = '2018'
license-file = "./LICENSE"
name = 'primitives-anagolay'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std'
]

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.1', default-features = false, features = ['derive']}
sp-std = { version = '3.0', default-features = false }
