[package]
authors = ['urn:pgp:d1f5e247a976f1e3c14f0a437a6db9962ef3978e']
repository = 'https://gitlab.com/anagolay/node/'
homepage = 'https://anagolay.network'
build = 'build.rs'
edition = '2018'
license = 'Apache 2.0'
name = 'sensio'
version = '0.2.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
vergen = '3.0.4'


[[bin]]
name = 'sensio'

[dependencies]
futures = '0.3.5'
log = '0.4.8'
parking_lot = '0.11.0'
structopt = '0.3.15'
[dependencies.sensio-runtime]
path = '../runtime'
version = '0.1.0'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'
