[package]
authors = ['did:substrate:GHm6gp6khjcxQvnbnSsHdYejsFK1nNVxcGyGAsbDfsymtLr']
repository = 'https://gitlab.com/anagolay/anagolay/'
homepage = 'https://anagolay.network'
license-file = "./LICENSE"
edition = '2018'
name = 'anagolay-runtime'
version = '0.3.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0'

[features]
default = ['std']
runtime-benchmarks = [
  'frame-benchmarking',
  'frame-support/runtime-benchmarks',
  'frame-system-benchmarking',
  'hex-literal',
  'sp-runtime/runtime-benchmarks',
  'system/runtime-benchmarks',
  'an-operations/runtime-benchmarks',
  #  'an-poe/runtime-benchmarks',
  #  'an-rules/runtime-benchmarks',
  #  'an-statements/runtime-benchmarks',
]
std = [
  'aura/std',
  'balances/std',
  'codec/std',
  'frame-executive/std',
  'frame-support/std',
  'grandpa/std',
  'pallet-utility/std',
  'randomness-collective-flip/std',
  'serde',
  'sp-api/std',
  'sp-block-builder/std',
  'sp-consensus-aura/std',
  'sp-core/std',
  'sp-inherents/std',
  'sp-offchain/std',
  'sp-runtime/std',
  'sp-session/std',
  'sp-std/std',
  'sp-transaction-pool/std',
  'sp-version/std',
  'sudo/std',
  'system/std',
  'timestamp/std',
  'transaction-payment/std',
  'anagolay-support/std',
  'an-operations/std',
  #  'an-statements/std',
  #  'an-poe/std',
  #  'an-rules/std',
]

[dependencies]
aura = { version = '3.0', default-features = false, package = 'pallet-aura' }
balances = { version = '3.0', default-features = false, package = 'pallet-balances' }
codec = { version = '2.1', default-features = false, features = [
  'derive',
], package = 'parity-scale-codec' }
frame-benchmarking = { version = '3.0', default-features = false, optional = true }
frame-executive = { version = '3.0', default-features = false }
frame-support = { version = '3.0', default-features = false }
frame-system-benchmarking = { version = '3.0', default-features = false, optional = true }
grandpa = { version = '3.0', default-features = false, package = 'pallet-grandpa' }
hex-literal = { version = '0.3', optional = true }
randomness-collective-flip = { version = '3.0', default-features = false, package = 'pallet-randomness-collective-flip' }
pallet-utility = { version = '3.0', default-features = false }
serde = { version = '1.0', features = ['derive'], optional = true }
sp-api = { version = '3.0', default-features = false }
sp-block-builder = { version = '3.0', default-features = false }
sp-consensus-aura = { version = '0.9', default-features = false }
sp-core = { version = '3.0', default-features = false }
sp-inherents = { version = '3.0', default-features = false }
sp-offchain = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-session = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }
sp-transaction-pool = { version = '3.0', default-features = false }
sp-version = { version = '3.0', default-features = false }
sudo = { version = '3.0', default-features = false, package = 'pallet-sudo' }
system = { version = '3.0', default-features = false, package = 'frame-system' }
system-rpc-runtime-api = { version = '3.0', default-features = false, package = 'frame-system-rpc-runtime-api' }
timestamp = { version = '3.0', default-features = false, package = 'pallet-timestamp' }
transaction-payment = { version = '3.0', default-features = false, package = 'pallet-transaction-payment' }
transaction-payment-rpc-runtime-api = { version = '3.0', default-features = false, package = 'pallet-transaction-payment-rpc-runtime-api' }
smallvec = "1.6.1"

anagolay-support = { path = '../pallets/anagolay-support', default-features = false }
an-operations = { path = '../pallets/operations', default-features = false, package = 'an-operations' }
# an-rules = { path = '../pallets/rules', default-features = false, package = 'an-rules' }
# an-statements = { path = '../pallets/statements', default-features = false, package = 'an-statements' }
# an-poe = { path = '../pallets/poe', default-features = false, package = 'an-poe' }
