[package]
name = "anagolay-runtime"
version = "0.4.0"
description = "A substrate-based runtime for Anagolay Network"
authors = ['Anagolay Developers']
license-file = "./LICENSE"
homepage = 'https://anagolay.network'
repository = 'https://github.com/anagolay/anagolay-chain/'
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }
hex-literal = { version = "0.3.4", optional = true }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = [
  "derive",
] }
smallvec = "1.10.0"
getrandom = { version = "0.2", features = ["js"] }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.32" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.32" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.32" }
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }

pallet-treasury = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
pallet-vesting = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
pallet-multisig = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
pallet-identity = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }

# Used for custom RPCs
operations-rpc-runtime-api = { path = '../pallets/operations/rpc/runtime-api', default-features = false }
workflows-rpc-runtime-api = { path = '../pallets/workflows/rpc/runtime-api', default-features = false }
verification-rpc-runtime-api = { path = '../pallets/verification/rpc/runtime-api', default-features = false }
tipping-rpc-runtime-api = { path = '../pallets/tipping/rpc/runtime-api', default-features = false }

# Polkadot
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.32" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.32" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.32" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.32" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.32" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.32" }


# Local Dependencies
anagolay-support = { path = '../pallets/anagolay-support', default-features = false }
operations = { path = '../pallets/operations', default-features = false }
workflows = { path = '../pallets/workflows', default-features = false }
statements = { path = '../pallets/statements', default-features = false }
poe = { path = '../pallets/poe', default-features = false }
verification = { path = '../pallets/verification', default-features = false }
tipping = { path = '../pallets/tipping', default-features = false }

# Cumulus
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32", default-features = false, version = "3.0.0" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32", default-features = false }
pallet-collator-selection = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.32", default-features = false }

[dev-dependencies]
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

[features]
default = ["std"]
std = [
  "codec/std",
  "log/std",
  "scale-info/std",
  "cumulus-pallet-aura-ext/std",
  "cumulus-pallet-dmp-queue/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-pallet-xcm/std",
  "cumulus-pallet-xcmp-queue/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-timestamp/std",
  "cumulus-primitives-utility/std",
  "frame-executive/std",
  "frame-support/std",
  "frame-system-rpc-runtime-api/std",
  "frame-system/std",
  "pallet-aura/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-collator-selection/std",
  "pallet-session/std",
  "pallet-sudo/std",
  "pallet-timestamp/std",
  "pallet-treasury/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-transaction-payment/std",
  "pallet-xcm/std",
  "parachain-info/std",
  "polkadot-parachain/std",
  "polkadot-runtime-common/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "xcm-builder/std",
  "xcm-executor/std",
  "xcm/std",
  'pallet-timestamp/std',
  'pallet-utility/std',
  'pallet-vesting/std',
  'pallet-scheduler/std',
  'pallet-uniques/std',
  'pallet-proxy/std',
  'pallet-multisig/std',
  'pallet-identity/std',
  'anagolay-support/std',
  'operations/std',
  'operations-rpc-runtime-api/std',
  'statements/std',
  'poe/std',
  'workflows/std',
  'workflows-rpc-runtime-api/std',
  'verification/std',
  'verification-rpc-runtime-api/std',
  'tipping/std',
  'tipping-rpc-runtime-api/std',
]

runtime-benchmarks = [
  "hex-literal",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collator-selection/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-treasury/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "xcm-builder/runtime-benchmarks",
  "cumulus-pallet-session-benchmarking/runtime-benchmarks",
  "cumulus-pallet-xcmp-queue/runtime-benchmarks",
  'pallet-utility/runtime-benchmarks',
  'pallet-vesting/runtime-benchmarks',
  'pallet-scheduler/runtime-benchmarks',
  'pallet-uniques/runtime-benchmarks',
  'pallet-proxy/runtime-benchmarks',
  'pallet-multisig/runtime-benchmarks',
  'pallet-identity/runtime-benchmarks',
  'anagolay-support/runtime-benchmarks',
  'operations/runtime-benchmarks',
  'poe/runtime-benchmarks',
  'workflows/runtime-benchmarks',
  'statements/runtime-benchmarks',
  'verification/runtime-benchmarks',
  'tipping/runtime-benchmarks',
]

try-runtime = [
  "cumulus-pallet-aura-ext/try-runtime",
  "cumulus-pallet-dmp-queue/try-runtime",
  "cumulus-pallet-parachain-system/try-runtime",
  "cumulus-pallet-xcm/try-runtime",
  "cumulus-pallet-xcmp-queue/try-runtime",
  "frame-executive/try-runtime",
  "frame-system/try-runtime",
  "frame-try-runtime",
  "pallet-aura/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-collator-selection/try-runtime",
  "pallet-session/try-runtime",
  "pallet-sudo/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-treasury/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "pallet-xcm/try-runtime",
  "parachain-info/try-runtime",
  'pallet-utility/try-runtime',
  "pallet-vesting/try-runtime",
  'pallet-scheduler/try-runtime',
  'pallet-uniques/try-runtime',
  'pallet-proxy/try-runtime',
  'pallet-multisig/try-runtime',
  'pallet-identity/try-runtime',
  'anagolay-support/try-runtime',
  'operations/try-runtime',
  'poe/try-runtime',
  'workflows/try-runtime',
  'statements/try-runtime',
  'verification/try-runtime',
  'tipping/try-runtime',
]
