[package]
name = "sn-cid"
version = "0.1.0"
authors = ['urn:pgp:d1f5e247a976f1e3c14f0a437a6db9962ef3978e']
edition = "2018"

# [features]
# default = ['std']
# std = ['sp-std/std']
# [profile.dev]
# panic = "abort"
# [profile.release]
# panic = "abort"
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.cid]
default-features = false
version = "0.5.1"

[dependencies.multihash]
default-features = false
version = "0.11.2"

[dependencies.multibase]
default-features = false
version = "0.8.0"
# [dependencies.sp-std]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'v2.0.0-rc4'
# version = '2.0.0-rc4'
