[package]
authors = ['did:substrate:GHm6gp6khjcxQvnbnSsHdYejsFK1nNVxcGyGAsbDfsymtLr']
description = 'Anagolay support pallet, default types and shared implementations are here'
repository = 'https://gitlab.com/anagolay/anagolay/'
edition = '2018'
license-file = './LICENSE'
name = 'anagolay-support'
version = '0.3.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-core/std',
  'sp-runtime/std',
  'sp-std/std',
  'sp-io/std',
]

[dev-dependencies]
serde = { version = "1.0" }

[dependencies]
cid = { version = '0.8.3', default-features = false, features = ["alloc"] }
multibase = { version = '0.9.1', default-features = false }
multihash = { version = '0.15.0', default-features = false, features = [
  'multihash-impl',
  'blake3',
] }
codec = { version = '2.1', default-features = false, features = [
  'derive',
], package = 'parity-scale-codec' }
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
sp-core = { version = '3.0', default-features = false }
sp-io = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }
