[package]
authors      = ['did:substrate:GHm6gp6khjcxQvnbnSsHdYejsFK1nNVxcGyGAsbDfsymtLr']
description  = 'Anagolay support pallet, default types and shared implementations are here'
repository   = 'https://gitlab.com/anagolay/anagolay/'
edition      = '2018'
license-file = './LICENSE'
name         = 'anagolay-support'
version      = '0.3.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = [
  "derive",
] }
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
frame-benchmarking = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", optional = true }

cid = { version = '0.8.3', default-features = false, features = ["alloc"] }
multibase = { version = '0.9.1', default-features = false }
multihash = { version = '0.15.0', default-features = false, features = [
  'multihash-impl',
  'blake3',
] }
serde = { version = '1.0', features = ['derive'], optional = true }
paste = { version = '1.0' }

[dev-dependencies]
sp-core    = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-io      = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "serde",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime        = ["frame-support/try-runtime"]
