[package]
authors = ['Anagolay Developers']
description = 'Anagolay support pallet, default types and shared implementations are here'
repository = 'https://github.com/anagolay/anagolay-chain/'
edition = '2018'
license-file = './LICENSE'
name = 'anagolay-support'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = [
  "derive",
] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", optional = true }

cid = { version = '0.8.3', default-features = false, features = ["alloc"] }
multibase = { version = '0.9.1', default-features = false }
serde = { version = '1.0', features = ['derive'], optional = true }
serde_json = { version = "1.0", optional = true }
paste = { version = '1.0' }
wf_cidv1_from_array = { default-features = false, git = "https://ipfs.anagolay.network/ipfs/bafybeic73yywf5rqrjhhkavf2zt4gunumo2thmrrxvpn2yigbu6j3lsaxy" }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "serde",
  "serde_json",
  "wf_cidv1_from_array/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
