[package]
authors = ['did:substrate:GHm6gp6khjcxQvnbnSsHdYejsFK1nNVxcGyGAsbDfsymtLr']
description = 'Anagolay pallet, defaults are here'
repository = 'https://gitlab.com/anagolay/node/'
homepage = 'https://anagolay.network/pallet/anagolay'
edition = '2018'
license-file = "./LICENSE"
name = 'pallet-anagolay'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
    "sp-io/std",
]

[dependencies]
codec = { version = '2.1', default-features = false, features = [
    'derive',
], package = 'parity-scale-codec' }
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
sp-core = { version = '3.0', default-features = false }
sp-io = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }

